
-------------------------------------------------------------------------------

* Changes in Cdecl 11.16

** Added suggestions
Added suggestions to error messages in certain cases when a keyword is
expected, for example:

    cdecl> declare x as type poiner to int
                             ^
    19: syntax error: "poiner": "as" expected; did you mean "pointer"?


** Color and `TERM`
The `TERM` environment variable is no longer considered when determining
whether color should be used in output.  Now, all that matters is whether the
output stream is connected to a TTY.

** `help options` types
Help for types was added to options help.

** `explicit` help
The missing `explicit` was added to the help.

** `explicit-escu` for `enum`
The `explicit-ecsu` option for enums is fixed.

** `_Noreturn` deprecated
`_Noreturn` is now deprecated in C2X.

** Printing of types
Now printing types in error messages as they were originally defined (pseudo-
English vs. gibberish) in more cases.

** Additional sanitizers
The `configure` options of `--enable-msan` and `--enable-ubsan` have been added
to enable clang's Memory Sanitizer and Undefined Behavior Sanitizer,
respectively.  The previous `--enable-address-sanitizer` has been renamed to
`--enable-asan`.

** `show` autocompletion
The `show` command now uses command-specific autocompletion.

** Types as objects, English edition
Previously declared types in pseudo-Engilsh are now checked to ensure they're
not being used as objects:

    cdecl> struct S
    cdecl> declare S as int             // error (now)


* Changes in Cdecl 11.15

** `_Atomic` arrays
`_Atomic` arrays are now correctly forbidden:

    typedef int A[2]
    explain _Atomic A x  // error: _Atomic array of T is illegal

Note that:

    _Atomic int x[2];    // OK: array of _Atomic T is legal

is legal.

** `CDECLRC` environment variable
If none of the `--config`, `-c`, `--no-config`, nor `-C` command line options