@@ -20,6 +20,11 @@ expected, for example:
                              ^
     19: syntax error: "poiner": "as" expected; did you mean "pointer"?
 
+** Better executable name checking
+Previously, if cdecl was invoked as `cast`, `declare`, or `explain`, or with a
+name that isn't a command (through renaming or a hard or a symbolic link)
+without command-line arguments, it behaved as if it were invoked as `cdecl`
+without error.  This has been fixed.
 
 ** Color and `TERM`
 The `TERM` environment variable is no longer considered when determining
